@@ -1,15 +1,30 @@
 # The testing matrix considers ruby/puppet versions supported by SIMP and PE:
+#
+# https://puppet.com/docs/pe/2018.1/component_versions_in_recent_pe_releases.html
+# https://puppet.com/misc/puppet-enterprise-lifecycle
+# https://puppet.com/docs/pe/2018.1/overview/getting_support_for_pe.html
 # ------------------------------------------------------------------------------
-#  release    pup   ruby      eol
-# PE 2016.4   4.7   2.1.9  TBD (LTS)
-# PE 2016.5   4.8   2.1.9  2017-10-31
-# SIMP6.0.0   4.8   2.1.9  TBD
-# PE 2017.1   4.9   2.1.9  2017-10-31
-# PE 2017.2   4.10  2.1.9  TBD
+# Release       Puppet   Ruby   EOL
+# SIMP 6.2      4.10     2.1.9  TBD
+# PE 2016.4     4.10     2.1.9  2018-12-31 (LTS)
+# PE 2017.3     5.3      2.4.4  2018-12-31
+# SIMP 6.3      5.5      2.4.4  TBD***
+# PE 2018.1     5.5      2.4.4  2020-05 (LTS)***
+# PE 2019.0     6.0      2.5.1  2019-08-31^^^
+#
+# *** = Modules created for SIMP 6.3+ are not required to support Puppet < 5.5
+# ^^^ = SIMP doesn't support 6 yet; tests are info-only and allowed to fail
+
 ---
 language: ruby
 cache: bundler
 sudo: false
+
+stages:
+  - check
+  - spec
+  - name: deploy
+    if: 'fork = false AND tag = true'
 
 bundler_args: --without development system_tests --path .vendor
 
@@ -24,11 +39,17 @@ addons:
 before_install:
   - rm -f Gemfile.lock
 
+global:
+  - STRICT_VARIABLES=yes
+
 jobs:
+  allow_failures:
+    - name: 'Latest Puppet 6.x (allowed to fail)'
+
   include:
     - stage: check
-      rvm: 2.4.1
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5"
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.5"
       script:
         - bundle exec rake check:dot_underscore
         - bundle exec rake check:test_file
@@ -40,31 +61,42 @@ jobs:
         - bundle exec puppet module build
 
     - stage: spec
-      rvm: 2.4.1
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 5.0"
+      name: 'Puppet 4.10 (SIMP 6.2, PE 2016.4)'
+      rvm: 2.1.9
+      env: PUPPET_VERSION="~> 4.10.0"
       script:
         - bundle exec rake spec
 
     - stage: spec
-      rvm: 2.1.9
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 4.10.0"
+      name: 'Puppet 5.3 (PE 2017.3)'
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.3.0"
       script:
         - bundle exec rake spec
 
     - stage: spec
-      rvm: 2.1.9
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 4.9.2"
+      rvm: 2.4.4
+      name: 'Puppet 5.5 (SIMP 6.3, PE 2018.1)'
+      env: PUPPET_VERSION="~> 5.5.0"
       script:
         - bundle exec rake spec
 
     - stage: spec
-      rvm: 2.1.9
-      env: STRICT_VARIABLES=yes TRUSTED_NODE_DATA=yes PUPPET_VERSION="~> 4.7.0"
+      name: 'Latest Puppet 5.x'
+      rvm: 2.4.4
+      env: PUPPET_VERSION="~> 5.0"
+      script:
+        - bundle exec rake spec
+
+    - stage: spec
+      name: 'Latest Puppet 6.x (allowed to fail)'
+      rvm: 2.5.1
+      env: PUPPET_VERSION="~>6.0"
       script:
         - bundle exec rake spec
 
     - stage: deploy
-      rvm: 2.1.9
+      rvm: 2.4.4
       script:
         - true
       before_deploy:
@@ -84,5 +116,4 @@ jobs:
             secure: "tNCUBg6B/j7xoRBL1WPd3r7hC+wWd8m9Qra2f7YClyn9kDRkbmeKUB6gaaNb7okIWSNn1BclQr8RNN35648dIwVToiOoST3KkKBRnEE4as4N5BcKGXMHcF8oNfd6munAn7DbQrYRJ1hVNHmqnBr18zv/s37GMoT3yZ6WYh71exkAJnIZRGSgWOYlWGrPvBwZlOj8JpySEvVsR3D11x6Mjo+P7LKj1LW+qxV+NFsp2vsrDqaEgSjg1KIlxCkq8GIwKRgm+45vgr1VZCbWtXOJx9BptJTg4n4LPlGfaqXacjA1m0cAHpFOSJ4z3YTP0LsxA9Rko04ahKZ0YizkynFJR4DfLhApUOrYFe5uu8Is9epXIJxECLZ7C8Qeyq0OTn/sNTMYTsIen9TlKA+RbRNxVkrkBGhR8pIcPpQusqDH5QIwRL42v7bwi6bqXX/iuEVCumA3KVZoT1y7ZlEaY8YEENKV3GH9PpC6XKGVfa1y5jFzi0UH3PH8FF2EuA89mYBfOVgcKZ5f38q39/2N2F8NRYX8yYCFTTGiVi84VhhNNRFT+ddzPVc5y8ShVjXZCFWN/QNAczkBeHoqXuJA2yr84hf4SoulEsGxCegsj1WpcwiOgwJZz0YwP5MYJDDZMn7yAp76pcyxzYGn5eTabY/7auaq8TniNQyh1zRLg0Wz71I="
           on:
             tags: true
-            rvm: 2.1.9
             condition: '($SKIP_FORGE_PUBLISH != true)'
