@@ -1,3 +1,6 @@
+* Mon Nov 05 2018 Liz Nemsick <lnemsick-simp@gmail.com> - 3.1.0-0
+- Update badges and contribution guide URL in README.md
+
 * Tue Sep 11 2018 Nicholas Markowski <nicholas.markowski@onyxpoint.com> - 3.1.0-0
 - Updated $app_pki_external_source to accept any string. This matches the
   functionality of pki::copy.
